feat: prepare에서 CouponList 삭제
- ref: #93